--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
 
@@ -18,6 +17,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y git zip unzip build-essential libncursesw5-dev libgdbm-dev libc6-dev zlib1g-dev libsqlite3-dev tk-dev libssl-dev openssl libffi-dev libxml2-dev libxslt1-dev libjpeg8-dev libfreetype6-dev python3-pip python3-setuptools python3-wheel
           pip3 install buildozer virtualenv
+          pip3 install cython
 
       - name: Build with Buildozer
         run: buildozer android debug
